tests/suite/manifests/nginxproxy-use-cluster-ip/nginx-proxy.yaml
apiVersion: gateway.nginx.org/v1alpha2
kind: NginxProxy
metadata:
  name: cluster-ip-proxy
spec:
  useClusterIP: true
